--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,21 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.value {
+  font-size: 25px;
+}
+.label {
+  font-size: 14px;
+  text-transform: uppercase;
+}
